<resources>
    <string name="rice">rice</string>
    <string name="grage">grage</string>
    <string name="circle">circle</string>
    <string name="_4_5">4.5</string>
    <string name="star">star</string>
    <string name="arrow">arrow</string>
    <string name="whiterectangle">whiterectangle</string>
    <string name="our_fried_rice_is_made_from_the_finest_ingredients_and_veggies_single_dish_is_made_with_fresh_vegetables_rescued">Our fried rice is made from the finest ingredients and veggies. single dish is made with fresh vegetables, rescued.</string>
    <string name="jollof_rice">Jollof Rice</string>
    <string name="suhani_s_stop_kukatpally">Suhani’s Stop, Kukatpally</string>
    <string name="description">Description</string>
    <string name="rescued">Rescued</string>
    <string name="vegan">Vegan</string>
    <string name="_30_min">30 min</string>
    <string name="nutritional_value">Nutritional Value</string>
    <string name="protein">Protein</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="sodium">Sodium</string>
    <string name="potassium">Potassium</string>
    <string name="rich_in_vitamin_a_c_and_b3">Rich in Vitamin A, C and B3</string>
    <string name="_145_cal">145 cal</string>
    <string name="morkovka">morkovka</string>
    <string name="select_user_user_1">Select User - User 1</string>
    <string name="user_1">User 1</string>
    <string name="_2_52">2.52</string>
    <string name="select_user">Select User -</string>
    <string name="back">back</string>
    <string name="motion">motion</string>
    <string name="next">next</string>
</resources>